<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#989798"
    android:layout_margin="10dp"
    android:padding="20dp"
    >
    <TextView
        android:id="@+id/tvTitle"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />
    <TextView
        android:id="@+id/tvDescription"
        android:textSize="13sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_label"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        />
    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/isCompleted"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/Completed"
        android:textColor="#77000000"

        />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/sharedbutton"
            android:text="Compartir"
            app:layout_constraintTop_toBottomOf="@id/isCompleted"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.Material3.Button.TextButton"
            />
        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/edit"
            android:text="@string/EditText"
            app:layout_constraintTop_toBottomOf="@id/isCompleted"
            app:layout_constraintStart_toEndOf="@id/btnShare"
            style="@style/Widget.Material3.Button.TextButton"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>